Add Mevzuatlar and Kongreler pages with admin panel, views and templates - inspired by tab.org.tr design

--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,8 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'projeler' %}">Projeler</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'aricilik' %}">Arıcılık</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'mevzuatlar' %}">Mevzuatlar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'kongreler' %}">Kongreler</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'baglantilar' %}">Bağlantılar</a></li>
                 </ul>
             </div>
